--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="C:\Web Development\HTML - Personal Site\images\eliProfile.png" alt="Eli's Profile Picture"></td>
+      <td><img src="images\eliProfile.png" alt="Eli's Profile Picture"></td>
       <td><h1>Eli Vaknin</h1>
       <p><em>Founder and CTO of <strong>his own PC</strong></em></p>
       <p>Eli is the man. He is doing it for quite a while now.</p></td>
